# Jiuao-Mprpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  calluserservice.cc
lib/mprpc/example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc
lib/mprpc/example/caller/: callfriendservice.cc
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: main.cc  test.pb.cc  test.pb.h  test.proto
